[metadata]
name = light-progress
version = attr: light_progress.__version__
license = MIT
author = itkr
author_email = itkrst@gmail.com
description = 'Light progress reporting tool for Python'
long_description = file: REDME.rst
long_description_content_type = text/x-rst
url = https://github.com/itkr/light-progress

[options]
packages = light_progress
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Utilities
